# student-invoice

./: .gitignore  BUILD_SIGNED_RELEASE.bat  Build-SignedRelease.ps1  DEVELOPMENT_SETUP.md  FIX_SIGNATURE_ERROR.md  NEXT_STEPS.md  README.md  Release.ps1  SIGNING_SETUP.md  UPDATE_FIX_SUMMARY.md  WORKING_UPDATE_SOLUTION.md  build.bat  dev.bat  find-cert-thumbprint.ps1  latest.json.TEMPLATE  me.md  release.bat  set-version.bat
src/components/: theme-toggle.tsx
src/hooks/: use-theme.ts
src/types/: index.ts
student-invoice-tauri/: .env  .gitignore  .npmrc  .pnpmrc  BUILD_SCRIPTS.md  DEVELOPMENT_SETUP.md  README.md  build.bat  build.ps1  dev.bat  dev.ps1  index.html  latest.json  new-build.bat  package.json  pnpm-lock.yaml  release.bat  setup.bat  setup.ps1  tailwind.config.js  update-version-inline.ps1  vite.config.ts
student-invoice-tauri/.github/workflows/: release.yml
student-invoice-tauri/src/: App.css  App.tsx
student-invoice-tauri/src-tauri/: Cargo.toml  tauri.conf.json
student-invoice-tauri/src-tauri/icons/: create-mail-icon.html
student-invoice-tauri/src-tauri/src/: gmail.rs  lib.rs  main.rs
student-invoice-tauri/src/components/: settings-dialog.tsx  template-form.tsx  theme-provider.tsx  theme-toggle.tsx
student-invoice-tauri/src/components/ui/: button.tsx  dialog.tsx
student-invoice-tauri/src/hooks/: use-toast.ts
student-invoice-tauri/src/stores/: app-store.ts
student-invoice-tauri/src/types/: emailjs.d.ts  index.ts
student-invoice-tauri/src/utils/: invoice-generator.ts
