[package]
name = "student-invoice-tauri"
version = "3.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "student_invoice_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OAuth2 and HTTP client
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# URL encoding
url = "2.5"
base64 = "0.22"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Environment variables
dotenvy = "0.15"

# Lazy static for global state
lazy_static = "1.4"

# URL encoding/decoding
urlencoding = "2.1"



